@@ -2,6 +2,7 @@ DIST holland-1.0.4.tar.gz 437221 RMD160 87604066c352c6ce9d312ca43bcad90b5ecdb2be
 DIST holland-1.0.6.tar.gz 435531 RMD160 c5c8a2b9aed1f2483ff9aadc44f0ee192f93b862 SHA1 5c00912d8a08ad6f38f46bce0cae7cfea0d7417f SHA256 f7977094fb7c2b7a483883a25fddb998412777235beac364f2378b8a96aca68a
 EBUILD holland-backup-pgdump-1.0.4.ebuild 692 RMD160 3d5bc258db98d602d4d8e78e75abab4e3f03f903 SHA1 6acce91958af52b716ee19dcba8c2ca9aaa794ee SHA256 81193cf650d03cb584126d25ad03d052e6d8a9eca83985f9cfe58e17932a68ec
 EBUILD holland-backup-pgdump-1.0.6-r1.ebuild 836 RMD160 4af78955e495bcc1bd89ef316591eb8486ba3e2e SHA1 857fa79942f1a011ee8f428839f76b0e645b0b0c SHA256 a4b83ba51b0cc6e03c562b8b9c0460d41dcd06e186d6a2399a5a8f473f767b07
+EBUILD holland-backup-pgdump-1.0.6-r2.ebuild 856 RMD160 762277ce2c5a8ca2d0e040d032dd6b24305a155c SHA1 ad473919ab1fcd212998f60aa7d6516afa408102 SHA256 b57b9133f9e7b5a83afadb3cb389560e14f6f9fc2af92250215e172ac89e822c
 EBUILD holland-backup-pgdump-1.0.6.ebuild 692 RMD160 53cb5130c0bd97250bedcc8b364e1b5b7cffe122 SHA1 30df1dbc5fa291715ac4e86c53147c753769acaf SHA256 c38e3738ae0ef2e3c8775d00b3f0d5ca4b97d23df4833d523ec6009489b94544
-MISC ChangeLog 1287 RMD160 2697602f8db76dfef0c840c0f430dfb2690057ed SHA1 80e92e116f32f658672868281e3e83489101b01c SHA256 ebc22258a2b0b20c668a05cd85bc17dc03d43d2eeb8f764932234a5a022a4b51
+MISC ChangeLog 1456 RMD160 79acc931b7ecfa3c947729a3bca11671a7a47a3f SHA1 e45e2afdf4ac37b66bd276743170ee9d025771d3 SHA256 83d32aed254f7ce219ede482ae7dffd60410a2f8f8d70465499dc06fcc021af0
 MISC metadata.xml 299 RMD160 100c4374c3be1b0f7f5471dd57b659d3fc6c4eed SHA1 01b95381417d2dce7668a8aab425daee94550186 SHA256 d8e113548c5c418f482af3e1a1b89b2408e2377ece82ae9b6ae46e60d21704d2
