@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*holland-backup-pgdump-1.0.6-r2 (26 Jan 2011)
+
+  26 Jan 2011; <alunduil@gentoo.org> +holland-backup-pgdump-1.0.6-r2.ebuild:
+  Missed a dependency on dev-python/psycopg
+
   26 Jan 2011; <alunduil@gentoo.org> holland-backup-pgdump-1.0.6-r1.ebuild:
   Removing the missing example set
 
